Bug 1979765 - Part 2: Avoid re-creating the overflow button-group in sidebar-main on expand r=desktop-theme-reviewers,mstriemer
The buttong-group for the overflow menu is being created and destroyed
each time the sidebar expands. Due to the event listener cleanup issue
in part 1 this was causing lots of event listeners to be created but not
get cleaned up. That is fixed in part 1, but we likely don't need to
keep creating and destroying this element and can instead hide it when
it isn't needed.

Differential Revision: https://phabricator.services.mozilla.com/D264441

--- a/browser/components/sidebar/sidebar-main.css
+++ b/browser/components/sidebar/sidebar-main.css
@@ -11,6 +11,10 @@
   }
 }
 
+[hidden] {
+  display: none !important;
+}
+
 :host {
   width: 100%;
 }
